[project]
name = "harbor"
version = "0.1.0"
description = "Harbor task evaluation framework"
requires-python = ">=3.13"
dependencies = [
    "pytest==8.4.1",
    "pytest-json-ctrf==0.3.5",
    "ruff>=0.9.0",
]

[project.scripts]
harbor = "harbor.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"